netctl and netctl-auto clenaing

--- a/src/netctl.in
+++ b/src/netctl.in
@@ -1,6 +1,7 @@
 #! /bin/bash
 
-. /usr/lib/network/globals
+. /home/cinelli/dev/netctl/src/lib/globals
+#. /usr/lib/network/globals
 
 
 usage() {
@@ -24,22 +25,21 @@ Commands:
 END
 }
 
-sd_escape() {
-    local IFS=''
-    # Prevent a recursion loop on backspaces
-    set -- "${@//\\/\\x5c}"
-    while [[ "$*" =~ [^[:alnum:].:_/\\] ]]; do
-        set -- "${@//$BASH_REMATCH/$(printf '\\x%x' "'$BASH_REMATCH")}"
-    done
-    printf "%s\n" "${@//\//-}"
-}
+#sd_escape() {
+#    local IFS=''
+#    # Prevent a recursion loop on backspaces
+#    set -- "${@//\\/\\x5c}"
+#    while [[ "$*" =~ [^[:alnum:].:_/\\] ]]; do
+#        set -- "${@//$BASH_REMATCH/$(printf "\x%x" "$BASH_REMATCH")}"
+#    done
+#    printf "%s\n" "${@//\//-}"
+#}
 
 # Wrapper around systemctl to convert profile names to unit names
 sd_call() {
     local command="$1"
     shift
-    set -- $(sd_escape "$@")
-    systemctl "$command" "$(printf 'netctl@%s.service\n' "$@")"
+    systemctl "$command" "$(printf "%s" "/"netctl@$@.service/"\n")"
 }
 
 list() {
@@ -74,64 +74,54 @@ restore() {
 stop_all() {
     # We cannot pipe to mapfile, as the end of a pipe is inside a subshell
     mapfile -t Profiles < <(list_files "$profile_dir")
-    [[ $Profiles ]] && do_debug sd_call stop "${Profiles[@]}" 2> \
-      >(grep -Fv "not loaded" >&2)
+    [[ $Profiles ]] && do_debug sd_call stop "${Profiles[@]}" 2> >(grep -Fv "not loaded" >&2)
 }
 
 switch_to() {
     cd "$profile_dir"
-    if [[ ! -r $1 ]]; then
-        report error "Profile '$1' does not exist or is not readable"
-    fi
+    [[ -r $1 ]] || report error "Profile $1 does not exist or is not readable"
     # We assume interface names are not quoted
     # Using read removes leading whitespace
-    read InterfaceLine < \
-      <(grep -om1 "^[[:space:]]*Interface=[[:alnum:]:._-]\+" "$1")
+    read InterfaceLine < <(grep -om1 "^[[:space:]]*Interface=[[:alnum:]:._-]\+" "$1")
     if [[ -z $InterfaceLine ]]; then
-        report error "Profile '$1' does not specify an interface"
+        report error "Profile $1 does not specify an interface"
     fi
     mapfile -t AllProfiles < <(list_files "$profile_dir")
     mapfile -t Profiles < <(grep -Fl "$InterfaceLine" "${AllProfiles[@]}")
-    [[ $Profiles ]] && do_debug sd_call stop "${Profiles[@]}" 2> \
-      >(grep -Fv "not loaded" >&2)
+    [[ $Profiles ]] && do_debug sd_call stop "${Profiles[@]}" 2> >(grep -Fv "not loaded" >&2)
     do_debug sd_call start "$1"
 }
 
 unit_enable() {
-    local unit="@systemdsystemconfdir@/netctl@$(sd_escape "$1").service"
-    if [[ -e $unit ]]; then
-        report error "A unit file for profile '$1' already exists"
-        return 1
-    fi
+    local unit="@systemdsystemconfdir@/netctl@${1}.service"
+    [[ -e $unit ]] && report error "A unit file for profile $1 already exists" && return 1
     load_profile "$1"
-    printf "%s\n" ".include @systemdsystemunitdir@/netctl@.service" > "$unit"
-    echo -e "\n[Unit]" >> "$unit"
+    printf "%q" ".include @systemdsystemunitdir@/netctl@${1}.service\n" > "$unit"
+    printf "%s" "[Unit]" >> "$unit"
     [[ -n $Description ]] && printf "%s\n" "Description=$Description" >> "$unit"
     [[ -v BindsToInterfaces ]] || BindsToInterfaces="$Interface"
     if (( ${#BindsToInterfaces[@]} )); then
         : ${InterfaceRoot=sys/subsystem/net/devices/}
-        printf "BindsTo=$(sd_escape "$InterfaceRoot")%s.device\n" \
-               $(sd_escape "${BindsToInterfaces[@]}") >> "$unit"
-        printf "After=$(sd_escape "$InterfaceRoot")%s.device\n" \
-               $(sd_escape "${BindsToInterfaces[@]}") >> "$unit"
+        printf "BindsTo=${InterfaceRoot}${BindsToInterfaces[@]}.device\n" >> "$unit"
+        printf "After=${InterfaceRoot}${BindsToInterfaces[@]}.device\n" >> "$unit"
     fi
     if (( ${#After[@]} )); then
-        printf "%s\n" "After="netctl@%s.service"\n" \
-               $(sd_escape "${After[@]}") >> "$unit"
+        printf "%s" "After=netctl@${After[@]}.service\n" >> "$unit"
     fi
     mkdir -p "@systemdsystemconfdir@/multi-user.target.wants"
-    printf "%s" "ln -s '$unit' '${unit/system\//system/multi-user.target.wants/}'"
+#   echo "ln -s '$unit' '${unit/system\//system/multi-user.target.wants/}'"
+    printf "%s" "ln -s '$unit' '${unit/system\//system/multi-user.target.wants/}'\n"
     ln -s "$unit" "${unit/system\//system/multi-user.target.wants/}"
     systemctl daemon-reload
 }
-
+cd /
 unit_disable() {
-    local unit="@systemdsystemconfdir@/netctl@$(sd_escape "$1").service"
+    local unit="@systemdsystemconfdir@/netctl@${1}.service"
     if sd_call "is-enabled --quiet" "$1" &> /dev/null; then
         sd_call disable "$1"
     fi
     if [[ ! -f $unit ]]; then
-        report error "No regular unit file found for profile '$1'"
+        report error "No regular unit file found for profile $1"
         return 1
     fi
     do_debug rm "$unit"
@@ -139,25 +129,32 @@ unit_disable() {
 }
 
 
-case $# in
+case "$#" in
   1)
-    case $1 in
+    case "$1" in
       --version)
-        report notice "netctl version $netctl_version";;
+          report notice "netctl version $netctl_version"
+          ;;
       --help)
-        usage;;
+          usage
+          ;;
       list)
-        list;;
+          list
+          ;;
       store|restore)
-        ensure_root "$(basename "$0")"
-        "$1";;
+          ensure_root "$(basename "$0")"
+          "$1"
+          ;;
       stop-all)
-        stop_all;;
+          stop_all
+          ;;
       *)
-        report error "$(usage)";;
-    esac;;
+          report error "$(usage)"
+          ;;
+  esac
+  ;;
   2)
-    case $1 in
+    case "$1" in
       start|stop|restart|status)
         sd_call "$1" "$2";;
       switch-to)
